--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tailwindcss -i ./src/input.css -o ./dist/assets/css/output.css -w"
+    "dev": "tailwindcss -i ./src/input.css -o ./dist/assets/css/style.css -w"
   },
   "repository": {
     "type": "git",
